rename image path

--- a/src/LoginApp.module.scss
+++ b/src/LoginApp.module.scss
@@ -15,7 +15,7 @@
 	height: 100vh;
 	width: 100%;
 	color: white;
-	background-image: url('./Components//Images/BackgroundColor.png');
+	background-image: url('../public/Images/BackgroundColor.png');
 	background-position: center;
 	background-size: cover;
 	.loginContainer {
